Closed Bug 386809 Opened 17 years ago Closed 17 years ago

nsCSSStruct* copy constructors no longer needed

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha8

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
The nsCSSStruct copy constructors aren't used anymore.  Making them private and not implemented (and thus not having compiler-generated ones either) will save a bit of codesize.
Attachment #270845 - Flags: superreview?(bzbarsky)
Attachment #270845 - Flags: review?(bzbarsky)
Comment on attachment 270845 [details] [diff] [review]
patch

Looks reasonable.

Can the copy constructors for nsCSSValueList, nsCSSCounterData, and nsCSSQuotes also go?  If so, we could nix CSS_IF_COPY as well.
Attachment #270845 - Flags: superreview?(bzbarsky)
Attachment #270845 - Flags: superreview+
Attachment #270845 - Flags: review?(bzbarsky)
Attachment #270845 - Flags: review+
(In reply to comment #1)
> Can the copy constructors for nsCSSValueList, nsCSSCounterData, and nsCSSQuotes
> also go?  If so, we could nix CSS_IF_COPY as well.

No; they ultimately end up backing nsICSSRule::Clone, which is called by at least nsGenericHTMLElement::CopyInnerTo. (I'm not sure where else; some sort of smart code browser would be very helpful here.)
Looks like Eli beat me to investigating, but yeah, I think there are a bunch of things that still use cloning style rules (which is done on the compressed structures).

So marking fixed, since I landed the above patch this morning.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: