Remove unused copy constructors.  b=386809  r+sr=bzbarsky